<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorsegundo"
    android:paddingTop="110dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="br.senac.sp.l13.segundoapp.LoginActivity">

    <ImageView
        android:layout_width="178dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:src="@drawable/icon" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/login"
        android:textColor="@color/colorsegundo"
        android:layout_marginBottom="40dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textAllCaps="true"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_member_sign_up_now"
        android:textColor="@color/colorButton"
        android:paddingLeft="60dp"
        android:paddingTop="30dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</LinearLayout>
